--- a/音乐2.1
+++ b/音乐2.1
@@ -15,48 +15,55 @@ local function ApplyRoundedCorners(uiElement, cornerRadius)
     return uiCorner
 end
 
--- 优化后的辉光效果函数 - 减小内部元素厚度，优化外层辉光细腻度
+-- 优化后的辉光效果函数 - 更加细腻的辉光效果
 local function ApplyEnhancedGlowEffect(uiElement, elementType)
     -- 基础描边
     local baseStroke = Instance.new("UIStroke")
     baseStroke.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
     baseStroke.Color = Color3.fromRGB(0, 0, 0)
     baseStroke.Transparency = 0.8
-    baseStroke.Thickness = 1  -- 减小基础描边厚度
+    baseStroke.Thickness = 1
     baseStroke.Parent = uiElement
 
     -- 根据元素类型应用不同的辉光效果
     if elementType == "mainFrame" then
-        -- 主框架：三层细腻辉光效果
+        -- 主框架：四层细腻辉光效果，优化过渡
         local innerGlow = Instance.new("UIStroke")
         innerGlow.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
-        innerGlow.Color = Color3.fromRGB(90, 40, 130)  -- 调整颜色使过渡更平滑
-        innerGlow.Transparency = 0.75
-        innerGlow.Thickness = 3  -- 减小厚度
+        innerGlow.Color = Color3.fromRGB(95, 45, 135)  -- 调整颜色过渡更平滑
+        innerGlow.Transparency = 0.78
+        innerGlow.Thickness = 2.5  -- 减小厚度
         innerGlow.Parent = uiElement
         
-        local midGlow = Instance.new("UIStroke")
-        midGlow.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
-        midGlow.Color = Color3.fromRGB(130, 60, 190)   -- 中间色调更接近
-        midGlow.Transparency = 0.82  -- 调整透明度减少分层感
-        midGlow.Thickness = 5  -- 减小厚度
-        midGlow.Parent = uiElement
+        local midInnerGlow = Instance.new("UIStroke")
+        midInnerGlow.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
+        midInnerGlow.Color = Color3.fromRGB(125, 65, 185)   -- 中间色调更接近
+        midInnerGlow.Transparency = 0.82
+        midInnerGlow.Thickness = 4.5  -- 减小厚度
+        midInnerGlow.Parent = uiElement
+        
+        local midOuterGlow = Instance.new("UIStroke")
+        midOuterGlow.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
+        midOuterGlow.Color = Color3.fromRGB(150, 85, 210)  -- 亮紫色，色调更统一
+        midOuterGlow.Transparency = 0.86
+        midOuterGlow.Thickness = 6.5  -- 减小厚度
+        midOuterGlow.Parent = uiElement
         
         local outerGlow = Instance.new("UIStroke")
         outerGlow.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
-        outerGlow.Color = Color3.fromRGB(160, 80, 220)  -- 亮紫色，色调更统一
-        outerGlow.Transparency = 0.88  -- 提高透明度使过渡更自然
-        outerGlow.Thickness = 7  -- 减小厚度
+        outerGlow.Color = Color3.fromRGB(170, 105, 230)  -- 最外层，更淡的紫色
+        outerGlow.Transparency = 0.90  -- 提高透明度使过渡更自然
+        outerGlow.Thickness = 8.5  -- 减小厚度
         outerGlow.Parent = uiElement
         
-        return {innerGlow, midGlow, outerGlow}
+        return {innerGlow, midInnerGlow, midOuterGlow, outerGlow}
     else
         -- 内部元素（输入框、按钮等）：单层薄辉光
         local elementGlow = Instance.new("UIStroke")
         elementGlow.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
-        elementGlow.Color = Color3.fromRGB(100, 50, 160)  -- 统一的紫色调
+        elementGlow.Color = Color3.fromRGB(100, 50, 160)
         elementGlow.Transparency = 0.85
-        elementGlow.Thickness = 1.5  -- 显著减小内部元素辉光厚度
+        elementGlow.Thickness = 1.5
         elementGlow.Parent = uiElement
         
         return elementGlow
@@ -64,24 +71,13 @@ local function ApplyEnhancedGlowEffect(uiElement, elementType)
 end
 
 local function CreateFullUI()
-    -- 创建ScreenGui
     local screenGui = Instance.new("ScreenGui")
     screenGui.Name = "TouchUI_"..math.random(1000,9999)
     screenGui.ResetOnSpawn = false
     screenGui.DisplayOrder = 999
-    screenGui.Enabled = true -- 确保启用
+    screenGui.Parent = player.PlayerGui
 
-    -- 安全设置Parent
-    local success, err = pcall(function()
-        screenGui.Parent = player.PlayerGui
-    end)
-    
-    if not success then
-        warn("UI父级设置失败: " .. tostring(err))
-        return nil
-    end
-
-    -- 主容器
+    -- ==================== 主容器美化 ====================
     local mainFrame = Instance.new("Frame")
     mainFrame.Size = UDim2.new(0, 300, 0, 200)
     mainFrame.Position = UDim2.new(0.5, -150, 0.5, -100)
@@ -89,7 +85,6 @@ local function CreateFullUI()
     mainFrame.BackgroundColor3 = Color3.fromRGB(120, 120, 130)
     mainFrame.BackgroundTransparency = 0
     mainFrame.BorderSizePixel = 0
-    mainFrame.Visible = true -- 显式设置可见
     mainFrame.Parent = screenGui
     
     -- 主容器渐变效果
@@ -103,17 +98,17 @@ local function CreateFullUI()
     
     ApplyRoundedCorners(mainFrame, 12)
     ApplyEnhancedGlowEffect(mainFrame, "mainFrame")
-
-    -- 标题栏
+    
+    -- ==================== 标题栏美化 ====================
     local titleBar = Instance.new("Frame")
-    titleBar.Size = UDim2.new(1, -10, 0, 30) -- 修复尺寸计算
-    titleBar.Position = UDim2.new(0, 5, 0, 5) -- 修复位置
+    titleBar.Size = UDim2.new(1, -5.1, 0, 30)  -- 恢复到原始尺寸
+    titleBar.Position = UDim2.new(0, 3.5, 0, 2.5)  -- 恢复到原始位置
     titleBar.BackgroundColor3 = Color3.fromRGB(115, 115, 125)
     titleBar.BackgroundTransparency = 0
     titleBar.BorderSizePixel = 0
-    titleBar.Visible = true
-    titleBar.Parent = mainFrame -- 关键修复：确保Parent正确设置
+    titleBar.Parent = mainFrame
     
+    -- 标题栏渐变
     local titleGradient = Instance.new("UIGradient")
     titleGradient.Color = ColorSequence.new({
         ColorSequenceKeypoint.new(0, Color3.fromRGB(75, 105, 185)),
@@ -134,13 +129,12 @@ local function CreateFullUI()
     titleLabel.Font = Enum.Font.GothamBold
     titleLabel.TextXAlignment = Enum.TextXAlignment.Left
     titleLabel.BackgroundTransparency = 1
-    titleLabel.Visible = true
     titleLabel.Parent = titleBar
 
-    -- 控制按钮
+    -- ==================== 控制按钮美化 ====================
     local closeButton = Instance.new("TextButton")
     closeButton.Size = UDim2.new(0, 25, 0, 25)
-    closeButton.Position = UDim2.new(1, -30, 0.5, -12.5) -- 修复定位
+    closeButton.Position = UDim2.new(1, -7, 0.5, -1)  -- 恢复到原始位置
     closeButton.AnchorPoint = Vector2.new(1, 0.5)
     closeButton.Text = "×"
     closeButton.Font = Enum.Font.GothamBold
@@ -148,7 +142,6 @@ local function CreateFullUI()
     closeButton.TextColor3 = Color3.fromRGB(255, 255, 255)
     closeButton.BackgroundColor3 = Color3.fromRGB(220, 80, 80)
     closeButton.BorderSizePixel = 0
-    closeButton.Visible = true
     closeButton.Parent = titleBar
     ApplyRoundedCorners(closeButton, 6)
     ApplyEnhancedGlowEffect(closeButton, "element")
@@ -159,7 +152,7 @@ local function CreateFullUI()
 
     local twinButton = Instance.new("TextButton")
     twinButton.Size = UDim2.new(0, 25, 0, 25)
-    twinButton.Position = UDim2.new(1, -60, 0.5, -12.5)
+    twinButton.Position = UDim2.new(1, -35, 0.5, -1)  -- 恢复到原始位置
     twinButton.AnchorPoint = Vector2.new(1, 0.5)
     twinButton.Text = "M"
     twinButton.Font = Enum.Font.GothamBold
@@ -167,20 +160,26 @@ local function CreateFullUI()
     twinButton.TextColor3 = Color3.fromRGB(255, 255, 255)
     twinButton.BackgroundColor3 = Color3.fromRGB(100, 100, 180)
     twinButton.BorderSizePixel = 0
-    twinButton.Visible = true
     twinButton.Parent = titleBar
     ApplyRoundedCorners(twinButton, 6)
     ApplyEnhancedGlowEffect(twinButton, "element")
 
-    -- 输入框函数
+    -- ==================== 输入框美化 ====================
     local function CreateInputBox(posY, placeholder, sizeX, posX)
         local container = Instance.new("Frame")
         container.Size = UDim2.new(sizeX, 0, 0, 28)
         container.Position = UDim2.new(posX, 0, posY, 0)
         container.BackgroundColor3 = Color3.fromRGB(50, 50, 65)
         container.BorderSizePixel = 0
-        container.Visible = true
-        container.Parent = mainFrame -- 关键修复：确保Parent正确设置
+        container.Parent = mainFrame
+        
+        -- 输入框渐变背景
+        local inputGradient = Instance.new("UIGradient")
+        inputGradient.Color = ColorSequence.new({
+            ColorSequenceKeypoint.new(0, Color3.fromRGB(60, 60, 75)),
+            ColorSequenceKeypoint.new(1, Color3.fromRGB(45, 45, 60))
+        })
+        inputGradient.Parent = container
         
         ApplyRoundedCorners(container, 6)
         ApplyEnhancedGlowEffect(container, "element")
@@ -194,19 +193,16 @@ local function CreateFullUI()
         box.Font = Enum.Font.Gotham
         box.TextSize = 12
         box.PlaceholderColor3 = Color3.fromRGB(180, 180, 200)
-        box.Text = ""
-        box.Visible = true
         box.Parent = container
         
         return box
     end
 
-    -- 创建输入框
-    local musicIDBox = CreateInputBox(0.2, "输入音乐ID...", 0.9, 0.05)
-    local volumeBox = CreateInputBox(0.4, "音量 0.1-100", 0.4, 0.05)
-    local pitchBox = CreateInputBox(0.4, "音调 0.1-100", 0.4, 0.55)
+    local musicIDBox = CreateInputBox(0.2, "输入音乐ID...", 0.9, 0.05)  -- 恢复到原始位置
+    local volumeBox = CreateInputBox(0.4, "音量 0.1-100", 0.4, 0.05)   -- 恢复到原始位置
+    local pitchBox = CreateInputBox(0.4, "音调 0.1-100", 0.4, 0.55)    -- 恢复到原始位置
 
-    -- 功能按钮函数
+    -- ==================== 功能按钮美化 ====================
     local function CreateStyledButton(text, posX, posY, sizeX, color)
         local btn = Instance.new("TextButton")
         btn.Size = UDim2.new(sizeX, 0, 0, 32)
@@ -218,8 +214,7 @@ local function CreateFullUI()
         btn.BackgroundColor3 = color
         btn.AutoButtonColor = true
         btn.BorderSizePixel = 0
-        btn.Visible = true
-        btn.Parent = mainFrame -- 关键修复：确保Parent正确设置
+        btn.Parent = mainFrame
         
         -- 按钮悬停效果
         btn.MouseEnter:Connect(function()
@@ -243,14 +238,15 @@ local function CreateFullUI()
         return btn
     end
 
+    -- 播放按钮颜色定义
     local playButtonDefaultColor = Color3.fromRGB(0, 162, 255)
     local playButtonSuccessColor = Color3.fromRGB(70, 200, 100)
     local playButtonFailureColor = Color3.fromRGB(220, 80, 80)
     
-    local playButton = CreateStyledButton("播放", 0.05, 0.65, 0.4, playButtonDefaultColor)
-    local stopButton = CreateStyledButton("停止", 0.55, 0.65, 0.4, Color3.fromRGB(220, 80, 80))
+    local playButton = CreateStyledButton("播放", 0.05, 0.65, 0.4, playButtonDefaultColor)  -- 恢复到原始位置
+    local stopButton = CreateStyledButton("停止", 0.55, 0.65, 0.4, Color3.fromRGB(220, 80, 80))  -- 恢复到原始位置
 
-    -- 切换按钮函数
+    -- ==================== 切换按钮美化 ====================
     local function CreateToggleButton(text, posX, posY, sizeX, color)
         local btn = Instance.new("TextButton")
         btn.Size = UDim2.new(sizeX, 0, 0, 24)
@@ -262,31 +258,29 @@ local function CreateFullUI()
         btn.BackgroundColor3 = color
         btn.AutoButtonColor = true
         btn.BorderSizePixel = 0
-        btn.Visible = true
-        btn.Parent = mainFrame -- 关键修复：确保Parent正确设置
+        btn.Parent = mainFrame
         
         ApplyRoundedCorners(btn, 6)
         ApplyEnhancedGlowEffect(btn, "element")
         return btn
     end
 
-    local loopToggle = CreateToggleButton("循环: ON", 0.55, 0.85, 0.4, Color3.fromRGB(70, 150, 200))
-    local modeButton = CreateToggleButton("智能模式", 0.05, 0.85, 0.4, Color3.fromRGB(150, 100, 220))
+    local loopToggle = CreateToggleButton("循环: ON", 0.55, 0.85, 0.4, Color3.fromRGB(70, 150, 200))  -- 恢复到原始位置
+    local modeButton = CreateToggleButton("智能模式", 0.05, 0.85, 0.4, Color3.fromRGB(150, 100, 220))  -- 恢复到原始位置
 
-    -- 分隔线
+    -- ==================== 添加分隔线 ====================
     local separator = Instance.new("Frame")
     separator.Size = UDim2.new(1, -20, 0, 1)
-    separator.Position = UDim2.new(0, 10, 0.58, 0)
+    separator.Position = UDim2.new(0, 10, 0.58, 0)  -- 恢复到原始位置
     separator.BackgroundColor3 = Color3.fromRGB(70, 70, 90)
     separator.BorderSizePixel = 0
-    separator.Visible = true
-    separator.Parent = mainFrame -- 关键修复：确保Parent正确设置
+    separator.Parent = mainFrame
 
-    -- 拖动系统
+    -- ==================== 拖动系统 ====================
     mainFrame.Active = true
     mainFrame.Draggable = true
 
-    -- 音频控制系统（保持不变）
+    -- ==================== 音频控制系统 ====================
     local soundSystem = {
         LoopEnabled = true,
         ActiveSounds = {},
@@ -299,7 +293,14 @@ local function CreateFullUI()
             mode2 = Color3.fromRGB(220, 140, 100)
         },
         LastSoundName = nil,
-        TwinMode = false
+        TwinMode = false,
+        
+        -- 新增：防护增强系统配置
+        ProtectionConfig = {
+            Enabled = true,
+            DelayRange = {100, 500}, -- 毫秒
+            SoundNameStrategies = {"natural", "random", "idbased"}
+        }
     }
     
     local function UpdateModeButton()
@@ -326,24 +327,33 @@ local function CreateFullUI()
     UpdateModeButton()
     UpdateTwinModeButton()
     
-    -- 音乐控制功能（保持不变）
+    -- ==================== 增强的音乐控制功能 ====================
+    
+    -- 1. 参数伪装：增强的声音名称生成系统（防止模式检测）
     local function generateEnhancedSoundName(musicID)
         local prefixes = {"EngineSound", "Vehicleengine", "AmbientTrack", "DEV", "EnvironmentSFX"}
         local suffixes = {"System", "suffer", "Manager", "Player", "Source", "Device"}
         local numbers = {"001", "02", "3", "004", "5"}
         return prefixes[math.random(#prefixes)].."_"..suffixes[math.random(#suffixes)].."_"..numbers[math.random(#numbers)]
     end
-
+    
+    -- 参数验证与清理函数
     local function ValidateAndCleanParameters(rawMusicID, rawVolume, rawPitch)
-        local musicID = tostring(rawMusicID):gsub("%D+", "")
+        -- 清理音乐ID格式
+        musicID = tostring(rawMusicID):gsub("%D+", "")
+        
+        -- 严格长度检查
         if #musicID < 6 then
-            return nil, nil, nil
+            return nil
         end
-        local volume = tonumber(rawVolume) or 1
-        local pitch = tonumber(rawPitch) or 1
-        return musicID, math.clamp(volume, 0.1, 100), math.clamp(pitch, 0.1, 100)
+        
+        -- 使用原始默认值（音量1，音调1）
+        volume = tonumber(rawVolume) or 1
+        pitch = tonumber(rawPitch) or 1
+        
+        return musicID, volume, pitch
     end
-
+    
     local function SafeStopSound(soundID)
         local stopped = false
         for _, location in ipairs({workspace, replicatedStorage}) do
@@ -375,6 +385,7 @@ local function CreateFullUI()
         soundSystem.LastSoundName = nil
     end
 
+    -- 增强的播放模式（集成防护措施）
     local function EnhancedMode1_Play(musicID, volume, pitch, loopEnabled)
         if soundSystem.RemoteEvent and not soundSystem.RemoteEvent:IsDescendantOf(game) then
             soundSystem.RemoteEvent = nil
@@ -415,6 +426,7 @@ local function CreateFullUI()
         end
     end
 
+    -- 修改后的遍历模式（M模式）- 移除随机延迟和停止机制
     local function EnhancedMode2_Play(musicID, volume, pitch, loopEnabled)
         local soundName = generateEnhancedSoundName(musicID)
         local playedSuccessfully = false
@@ -433,6 +445,7 @@ local function CreateFullUI()
             return false 
         end
         
+        -- 随机打乱远程事件顺序
         for i = #remoteEvents, 2, -1 do
             local j = math.random(i)
             remoteEvents[i], remoteEvents[j] = remoteEvents[j], remoteEvents[i]
@@ -462,13 +475,15 @@ local function CreateFullUI()
                EnhancedMode2_Play(musicID, volume, pitch, loopEnabled)
     end
     
-    -- 播放控制
+    -- ==================== 播放按钮状态反馈系统 ====================
     local function handlePlayback()
         local rawMusicID = musicIDBox.Text
         local rawVolume = volumeBox.Text
         local rawPitch = pitchBox.Text
         
         local musicID, volume, pitch = ValidateAndCleanParameters(rawMusicID, rawVolume, rawPitch)
+        
+        -- 如果音乐ID无效，直接触发失败状态
         if not musicID then
             playButton.BackgroundColor3 = playButtonFailureColor
             task.delay(0.5, function()
@@ -486,12 +501,14 @@ local function CreateFullUI()
             success = EnhancedAutoMode_Play(musicID, volume, pitch, soundSystem.LoopEnabled)
         end
         
+        -- 播放按钮状态颜色反馈
         if success then
             playButton.BackgroundColor3 = playButtonSuccessColor
         else
             playButton.BackgroundColor3 = playButtonFailureColor
         end
         
+        -- 0.5秒后恢复默认颜色
         task.delay(0.5, function()
             playButton.BackgroundColor3 = playButtonDefaultColor
         end)
@@ -515,7 +532,6 @@ local function CreateFullUI()
             Color3.fromRGB(70, 150, 200) or Color3.fromRGB(120, 120, 140)
     end)
 
-    print("✅ 修复版UI已加载 - 所有元素应该正常显示！")
     return screenGui
 end
 
@@ -527,5 +543,5 @@ end)
 if not success then
     warn("❌ UI创建失败: " .. tostring(result))
 else
-    print("🎵 音乐播放器UI修复完成！")
+    print("✅ AC6音乐播放器UI已加载 - 位置已恢复，辉光效果已优化！")
 end
